--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -17,7 +17,7 @@
                 <a class="nav-link active" id="portfolio-tab" data-toggle="tab" href="#portfolio" role="tab" aria-controls="portfolio" aria-selected="true">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="summary-tab" data-toggle="tab" href="#summary" role="tab" aria-controls="summary" aria-selected="false">Financial Summary</a>
+                <a class="nav-link" id="history-tab" data-toggle="tab" href="#history" role="tab" aria-controls="history" aria-selected="false">History</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="finlab-tab" data-toggle="tab" href="#finlab" role="tab" aria-controls="finlab" aria-selected="false">FinLab Report</a>
@@ -39,10 +39,13 @@
             </div>
 
             <!-- 第二個頁籤 -->
-            <div class="tab-pane fade" id="summary" role="tabpanel" aria-labelledby="summary-tab">
-                <h2>Financial Summary</h2>
+            <div class="tab-pane fade" id="history" role="tabpanel" aria-labelledby="history-tab">
+                <h2>History</h2>
                 <div id="financialSummaryPlot">
                     {{ plot1_html|safe }}
+                </div>
+                <div id="monthlyReturnPlot">
+                    {{ plot2_html|safe }}
                 </div>
             </div>
 
@@ -55,20 +58,18 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script> -->
     <script>
     $(document).ready(function() {
         // 初始化 DataTables
-        $('#df1_table').DataTable();
-        $('#df2_table').DataTable();
-
-        // 初始化 Plotly
-        var data = {{ plotly_data }};
-        var layout = {{ plotly_layout }};
-        Plotly.newPlot('financialSummaryPlot', data, layout);
+        // $('#df1_table').DataTable();
+        // $('#df2_table').DataTable();
+        // $('#df3_table').DataTable();
+        // $('#df4_table').DataTable();
     });
+    
     </script>
 </body>
 </html>
