Update ReportManager to include financial summary and monthly return plots

--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -32,7 +32,7 @@
                 {{ df1_html|safe }}
                 <h3>Next Portfolio</h3>
                 {{ df2_html|safe }}
-                <h3>order Status</h3>
+                <h3>Order Status</h3>
                 {{ df3_html|safe }}
                 <h3>Today's Financial Summary</h3>
                 {{ df4_html|safe }}
