Refactor DataProcessor to process special orders from log file

--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -34,8 +34,10 @@
                 {{ df2_html|safe }}
                 <h3>Order Status</h3>
                 {{ df3_html|safe }}
-                <h3>Today's Financial Summary</h3>
+                <h3>Special Order(需要圈存)</h3>
                 {{ df4_html|safe }}
+                <h3>Today's Financial Summary</h3>
+                {{ df5_html|safe }}
             </div>
 
             <!-- 第二個頁籤 -->
