Refactor DataPersistenceManager to add monthly_fund table and related methods

--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -38,6 +38,8 @@
                 {{ df4_html|safe }}
                 <h3>Today's Financial Summary</h3>
                 {{ df5_html|safe }}
+                <h3>Monthly Fund</h3>
+                {{ df6_html|safe }}
             </div>
 
             <!-- 第二個頁籤 -->
