--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -14,6 +14,7 @@
         <ul class="list-group my-3">
             <li class="list-group-item"><strong>Strategy:</strong> {{ strategy_class_name }}</li>
             <li class="list-group-item"><strong>Account:</strong> {{ account_name }}</li>
+            <li class="list-group-item"><strong>Simulation:</strong> {{ is_simulation }}</li>
         </ul>
 
         <!-- Nav tabs -->
